--- a/my-pets-frontend/src/user/dashboard/views/pets/PetList/PetList.css
+++ b/my-pets-frontend/src/user/dashboard/views/pets/PetList/PetList.css
@@ -1,5 +1,5 @@
 .pet-table-main-container {
-	background-color: transparent;
+	background-color: green;
 	height: 100%;
 	height: auto;
 }
